--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learning-expo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~52.0.46",
+    "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9"
