--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 🤖 Build Android APK
         run: |
           eas build --platform android --local
-          mv <(ls *.apk | head -n 1) app-release.apk
+          mv $(ls *.apk | head -n 1) app-release.apk
 
       - name: 🌐 Export Web
         run: |
