--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,8 @@ jobs:
       - name: 📦 Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: release-assets
+          name: github-pages
           path: |
-            app-release.apk
             web-build/
 
   deploy:
