Enable static rendering for web

--- a/eas.json
+++ b/eas.json
@@ -9,18 +9,27 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "web": {
+        "output": "static"
       }
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+      "web": {
+        "output": "static"
+        }
       }
     },
     "production": {
       "autoIncrement": true,
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+      "web": {
+        "output": "static"
+        }
       }
     }
   },
