--- a/eas.json
+++ b/eas.json
@@ -9,27 +9,18 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
-      },
-      "web": {
-        "output": "static"
       }
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk",
-      "web": {
-        "output": "static"
-        }
+        "buildType": "apk"
       }
     },
     "production": {
       "autoIncrement": true,
       "android": {
-        "buildType": "apk",
-      "web": {
-        "output": "static"
-        }
+        "buildType": "apk"
       }
     }
   },
