--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
     "expo": "^53.0.0",
+    "expo-dev-client": "^5.1.8",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
