Prebuild ios android apps, enable EdgeToEdge

--- a/app.json
+++ b/app.json
@@ -14,12 +14,14 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.souhrud.learningexpo"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "edgeToEdgeEnabled": true
       },
       "package": "com.souhrud.learningexpo"
     },
