--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "expo-dev-client": "^5.1.8",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.7",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-web": "^0.20.0"
