--- a/app.json
+++ b/app.json
@@ -20,8 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff",
-        "edgeToEdgeEnabled": true
+        "backgroundColor": "#ffffff"
       },
       "package": "com.souhrud.learningexpo"
     },
