--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
-    "expo": "^53.0.0",
+    "expo": "^53.0.7",
     "expo-dev-client": "^5.1.8",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.7",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-web": "^0.20.0"
   },
