--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.1.0",
     "expo": "^53.0.7",
     "expo-dev-client": "^5.1.8",
+    "expo-linking": "^7.1.4",
     "expo-router": "~5.0.5",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "^5.0.7",
